Fix old tests, add RoomsRepositoryTest